<resources>
    <string name="app_name">Lista de Tarefas</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="task_title">Título</string>
    <string name="task_description">Descrição</string>
    <string name="task_done">Realizada</string>
    <string name="task_date">Data</string>
    <string name="task_input_title_hint">Título da tarefa</string>
    <string name="task_input_description_hint">Descrição da tarefa</string>
    <string name="task_input_date_hint">Data da tarefa</string>
    <string name="task_input_done">Realizada</string>
    <string name="save">Salvar</string>
    <string name="delete">Remover</string>
    
    <string name="short_sunday">Dom</string>
    <string name="short_monday">Seg</string>
    <string name="short_tuesday">Ter</string>
    <string name="short_wednesday">Qua</string>
    <string name="short_thursday">Qui</string>
    <string name="short_friday">Sex</string>
    <string name="short_saturday">Sáb</string>

    <string name="short_january">Jan</string>
    <string name="short_february">Fev</string>
    <string name="short_march">Mar</string>
    <string name="short_april">Abr</string>
    <string name="short_may">Mai</string>
    <string name="short_june">Jun</string>
    <string name="short_july">Jul</string>
    <string name="short_august">Ago</string>
    <string name="short_september">Set</string>
    <string name="short_october">Out</string>
    <string name="short_november">Nov</string>
    <string name="short_december">Dez</string>


    <string name="save_success">Tarefa salva com sucesso</string>
    <string name="save_error">Erro ao salvar a tarefa</string>
    <string name="edit_success">Tarefa alterada com sucesso</string>
    <string name="edit_error">Erro ao alterar a tarefa</string>
    <string name="remove_success">Tarefa excluída com sucesso</string>
    <string name="remove_error">Erro ao excluir a tarefa</string>
</resources>
